--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -740,8 +740,8 @@
 	grid-template-rows: 20% 20% 20% 20% 20%;
 	left: 50%;
 	bottom: 0px;
-	width: 7.5%;
-	height: 15%;
+	width: 6%;
+	height: 12%;
 	background-color: transparent;
 }
 
@@ -870,6 +870,7 @@
 	width: 100%;
 	height: 10%;
 }
+
 .bullets__wrapper__row3 {
 	position: absolute;
 	z-index: 6 !important;
@@ -1158,6 +1159,7 @@
 	box-shadow: inset 0 3px 2px rgb(0 0 0 / 80%);
 }
 .gameboy__restart {
+	z-index: 10 !important;
 	cursor: pointer;
 	width: 40px;
 	height: 40px;
