--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -816,19 +816,16 @@
 	bottom: 0px;
 	background-color: black;
 	z-index: 7;
-
 	color: black;
 	width: 100%;
 	height: 25%;
 }
 .gameboy__menu {
 	font-size: 1.5rem;
-
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
 	color: white;
-
 	width: 100%;
 	height: 100%;
 	background: transparent;
@@ -836,7 +833,6 @@
 	animation-duration: 0.7s;
 	animation-timing-function: step-start;
 	animation-delay: 0s;
-
 	animation-iteration-count: 4;
 }
 .bullets__barrier {
@@ -999,6 +995,26 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+.lives__wrapper {
+	margin: 0px;
+	height: 40%;
+	width: 22%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.lives__wrapper__ship {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: 4%;
+	margin-right: 4%;
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+	grid-template-rows: 20% 20% 20% 20% 20%;
+	width: 25%;
+	height: 80%;
+	background-color: transparent;
 }
 .placeholder__hundred__thousands {
 	opacity: 0.4;
@@ -1479,6 +1495,10 @@
 	.gameboy__menu {
 		font-size: 1rem;
 	}
+	.lives__wrapper__ship {
+		width: 35%;
+		height: 85%;
+	}
 }
 
 @media screen and (max-width: 320px) {
@@ -1498,6 +1518,10 @@
 	.gameboy__pause__wrapper {
 		height: 75%;
 		margin-top: 20%;
+	}
+	.lives__wrapper__ship {
+		width: 30%;
+		height: 100%;
 	}
 }
 
