--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -752,12 +752,25 @@
 	left: 50%;
 	top: 50%;
 	content: "";
+	border: 0.2rem solid rgb(69, 126, 212);
 	transform: translate(-50%, -50%);
 	text-align: center;
-	width: 2rem;
-	height: 2rem;
+	width: 2.5rem;
+	height: 2.5rem;
 	opacity: 0.5;
-	background-color: lightblue;
+	background-image: linear-gradient(
+		293.5deg,
+		rgb(0, 195, 221) 3.2%,
+		rgb(69, 126, 212) 9.9%,
+		rgb(0, 195, 221) 22.9%,
+		rgb(69, 126, 212) 36.4%,
+		rgb(0, 195, 221) 50.1%,
+		rgb(69, 126, 212) 61.1%,
+		rgb(0, 195, 221) 71.2%,
+		rgb(69, 126, 212) 84.2%,
+		rgb(0, 195, 221) 92.2%
+	);
+	animation: glow 0.5s infinite alternate;
 }
 
 .ship-remove-class::after {
@@ -919,6 +932,7 @@
 	height: 10%;
 }
 .bullet__left {
+	position: relative;
 	margin: 0%;
 	margin-top: 0%;
 	width: 2%;
@@ -926,12 +940,14 @@
 }
 
 .bullet__right {
+	position: relative;
 	margin: 0%;
 	margin-top: 0%;
 	width: 2%;
 	background-color: yellow;
 }
 .bullet__middle {
+	position: relative;
 	margin: 0%;
 	margin-top: 0%;
 	width: 2%;
@@ -946,6 +962,27 @@
 @-webkit-keyframes blink {
 	50% {
 		opacity: 0;
+	}
+}
+@keyframes glow {
+	from {
+		box-shadow: 0px 0px 0.5rem 0.2rem rgb(70, 170, 170),
+			0px 0px 1rem 1rem rgb(19, 117, 228);
+	}
+	to {
+		box-shadow: 0px 0px 0.5rem 0.7rem rgb(70, 170, 170),
+			0px 0px 1rem 1.5rem rgb(19, 117, 228);
+	}
+}
+
+@-webkit-keyframes glow {
+	from {
+		box-shadow: 0px 0px 0.5rem 0.2rem rgb(70, 170, 170),
+			0px 0px 1rem 1rem rgb(19, 117, 228);
+	}
+	to {
+		box-shadow: 0px 0px 0.5rem 0.7rem rgb(70, 170, 170),
+			0px 0px 1rem 1.5rem rgb(19, 117, 228);
 	}
 }
 
@@ -1538,6 +1575,24 @@
 		width: 35%;
 		height: 85%;
 	}
+	.ship::after {
+		width: 2rem;
+		height: 2rem;
+	}
+	.ship-add-class::after {
+		width: 2rem;
+		height: 2rem;
+	}
+	@keyframes glow {
+		from {
+			box-shadow: 0px 0px 0.5rem 0.2rem rgb(70, 170, 170),
+				0px 0px 1rem 0.2rem rgb(19, 117, 228);
+		}
+		to {
+			box-shadow: 0px 0px 0.5rem 0.4rem rgb(70, 170, 170),
+				0px 0px 1rem 1.2rem rgb(19, 117, 228);
+		}
+	}
 }
 
 @media screen and (max-width: 320px) {
@@ -1561,6 +1616,24 @@
 	.lives__wrapper__ship {
 		width: 30%;
 		height: 100%;
+	}
+	.ship-add-class::after {
+		width: 1.5rem;
+		height: 1.5rem;
+	}
+	.ship::after {
+		width: 1.5rem;
+		height: 1.5rem;
+	}
+	@keyframes glow {
+		from {
+			box-shadow: 0px 0px 0.5rem 0rem rgb(70, 170, 170),
+				0px 0px 1rem 0.2rem rgb(19, 117, 228);
+		}
+		to {
+			box-shadow: 0px 0px 0.5rem 0.2rem rgb(70, 170, 170),
+				0px 0px 1rem 0.8rem rgb(19, 117, 228);
+		}
 	}
 }
 
