--- a/src/css/Chalk.css
+++ b/src/css/Chalk.css
@@ -14,6 +14,7 @@
 	-ms-user-select: none; /* Internet Explorer/Edge */
 	user-select: none;
 	border-width: 0px;
+	overflow: hidden;
 }
 
 .chalk__images__wrapper {
