--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -1345,8 +1345,8 @@
 }
 .gameboy__pause__active {
 	cursor: pointer;
-	width: 150px;
-	height: 150px;
+	width: 70%;
+	height: 50%;
 	box-shadow: inset 0px -5px 5px black;
 
 	border: 1px solid black;
@@ -1410,7 +1410,7 @@
 
 .gameboy__uparrow1 {
 	cursor: pointer;
-	width: 33%;
+	width: 35%;
 	height: 95%;
 	box-shadow: inset 0px -5px 5px black;
 	border: 1px solid black;
@@ -1429,8 +1429,18 @@
 }
 
 .gameboy__uparrow1__active {
-	cursor: pointer;
-	width: 29%;
+	width: 35%;
+	height: 95%;
+	box-shadow: inset 0px -5px 5px black;
+	border: 1px solid black;
+	border-radius: 50%;
+	background-color: rgb(194, 30, 30);
+	outline: 0;
+	box-shadow: inset 0 5px 8px rgb(0 0 0 / 80%);
+}
+
+.gameboy__uparrow1__active__1 {
+	width: 35%;
 	height: 95%;
 	box-shadow: inset 0px -5px 5px black;
 	border: 1px solid black;
@@ -1582,13 +1592,7 @@
 	.start__wrapper {
 		font-size: 1.3rem;
 	}
-	.gameboy__pause {
-		width: 50%;
-		height: 50%;
-	}
-	.gameboy__uparrow1 {
-		width: 29%;
-	}
+
 	.ship-add-class::after {
 		width: 2.5rem;
 		height: 2.5rem;
