--- a/src/App.css
+++ b/src/App.css
@@ -43,14 +43,21 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#63856a', endColorstr='#3c5a40',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
 	min-height: 100vh;
+	height: 100vh;
 	color: white;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
 	overflow: hidden;
+	
 }
 
 .stars__wrapper {
 	position: absolute;
 	top: 1px;
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
+
