--- a/src/css/Chalk.css
+++ b/src/css/Chalk.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap");
 .chalk__wrapper {
+	min-height: 100vh;
+	max-height: 100vh;
 	font-family: "Give You Glory", cursive;
 	position: absolute;
 	z-index: 0 !important;
@@ -43,7 +45,7 @@
 	-ms-border-radius: 0.3em 0.3em 0.2em 0.3em;
 	-o-border-radius: 0.3em 0.3em 0.2em 0.3em;
 	border-radius: 0.3em 0.3em 0.2em 0.3em;
-	position: fixed;
+	position: absolute;
 	width: 75px;
 	height: 8px;
 	background: #f1f1f1;
