--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -59,7 +59,7 @@
 	width: 100%;
 	border: 3px groove rgb(134, 131, 131);
 	border-radius: 35px;
-	border-bottom-right-radius: 90px;
+	border-bottom-right-radius: 60px;
 	box-shadow: inset 0 0 40px rgb(68, 66, 66);
 	height: 100%;
 	background-color: gray;
@@ -624,6 +624,18 @@
 	background: transparent;
 	width: 100%;
 	height: 75%;
+}
+
+.gameboy__display__top__gameover__score {
+	width: auto;
+	white-space: nowrap;
+	text-align: center;
+}
+
+.gameboy__display__top__gameover__highscore {
+	width: auto;
+	white-space: nowrap;
+	text-align: center;
 }
 
 .gameboy__display__top__gameover__title {
