--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,8 @@
 	); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#63856a', endColorstr='#3c5a40',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
-	min-height: 100vh;
-
 	height: 100vh;
+	height: var(--app-height);
 	color: white;
 	display: flex;
 	justify-content: space-evenly;
@@ -61,8 +60,18 @@
 	display: none;
 }
 
+:root {
+	--app-height: 100%;
+}
+
 html,
 body {
+	background-color: #282c34;
 	margin: 0;
-	min-height: 100vh;
+
+	padding: 0;
+	overflow: hidden;
+	width: 100vw;
+	height: 100vh;
+	height: var(--app-height);
 }
